--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
     function checkWin(){
       console.log('text', $('#m00').text());
+      
+      // m00, m01, m02
+      // m00, m10, m20
+
+      // for (var i = 0; i < 3; i++) {
+      //   for (var j = 0; j < 3, j++) {
+
+      //   }
+      // }
+
     }
 
     $('.square').click((e) => {
@@ -26,12 +36,13 @@
 
 <style type="text/css">
   .square {
-  width: 50px;
-  height: 50px;
-  background-color: red;
-  margin: 10px;
-  display: inline-block;
-}
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    margin: 10px;
+    display: inline-block;
+    font-size: 30px;
+  }
 </style>
 
 
